<resources>
    <string name="app_name">Cyrenaica Server</string>
    <string name="app_name_small">Cyrenaica Server</string>
    <string name="app_name_cap">CYRENAICA SERVER</string>
    <string name="nc_field_capital">NC</string>
    <string name="unknown_field_small">Unknown</string>
    <string name="scanning_text">Scanning</string>
    <string name="scanning_points_text">Scanning…</string>
    <string name="connected_text">Connected</string>
    <string name="not_connected_text">Disconnected</string>
    <string name="not_auth_text">Not authorized</string>
    <string name="word_servers_small">servers</string>
    <string name="word_servers_first_cap_small">Servers</string>
    <string name="word_servers_cap">SERVERS</string>
    <string name="word_server_small">server</string>
    <string name="word_server_first_cap_small">Server</string>
    <string name="word_server_cap">SERVER</string>
    <string name="word_devices_small">devices</string>
    <string name="word_devices_first_cap_small">Devices</string>
    <string name="word_devices_cap">DEVICES</string>
    <string name="word_device_small">device</string>
    <string name="word_device_first_cap_small">Device</string>
    <string name="word_device_cap">DEVICE</string>
    <string name="word_model_cap">MODEL</string>
    <string name="word_spiffs_cap">SPIFFS</string>
    <string name="word_heap_cap">HEAP</string>
    <string name="word_frequancey_cap">FREQUANCEY</string>
    <string name="word_name_cap">NAME</string>
    <string name="word_name_first_cap_small">Name</string>
    <string name="word_id_cap">ID</string>
    <string name="word_type_cap">TYPE</string>
    <string name="word_network_status_cap">NETWORK STATUS</string>
    <string name="word_connection_first_cap_small">Connection</string>
    <string name="word_connection_cap">CONNECTION</string>
    <string name="word_wifi_first_cap_small">Wifi</string>
    <string name="word_wifi_cap">WIFI</string>
    <string name="word_mobile_cap">MOBILE</string>
    <string name="word_mobile_first_cap_small">Mobile</string>
    <string name="word_ip_cap">IP</string>
    <string name="word_mac_cap">MAC</string>
    <string name="word_connected_first_cap_small">Connected</string>
    <string name="word_disconnected_first_cap_small">Disconnected</string>
    <string name="word_secured_first_cap_small">Secured</string>
    <string name="word_unsecured_first_cap_small">Unsecured</string>
    <string name="word_status_first_cap_small">Status</string>
    <string name="word_wifi_status_first_cap_small">Wifi</string>
    <string name="word_espnow_status_first_cap_small">Espnow</string>
    <string name="word_date_time_first_cap_small">DateTime</string>
    <string name="word_settings_cap">SETTINGS</string>
    <string name="word_settings_first_cap_small">Settings</string>
    <string name="word_minutes_first_cap_small">Minute(s)</string>
    <string name="word_record_first_cap_small">Record</string>
    <string name="word_watch_first_cap_small">Watch</string>
    <string name="word_advanced_settings_cap">ADVANCED SETTINGS</string>
    <string name="word_fonts_cap">ADVANCED SETTINGS</string>
    <string name="word_fonts_first_cap_small">Fonts</string>
    <string name="word_size_cap_small">Size</string>
    <string name="word_pic_logo_cap_small">Pick logo</string>
    <string name="word_pic_position_cap_small">Position</string>
    <string name="word_text_color_cap_small">Font color</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="button_start">Start</string>
    <string name="button_close">Close</string>
    <string name="button_end">End</string>
    <string name="terminate_button">Terminate</string>
    <string name="retry_button">Retry</string>
    <string name="button_setup">Setup</string>
    <string name="button_scan">Scan</string>
    <string name="button_database_setup">Setup Database</string>
    <string name="button_get_device">Get Device</string>
    <string name="button_enable_wifi">Enable Wifi</string>
    <string name="button_enable_gps">Enable Gps</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_connect">Connect</string>
    <string name="button_save">Save</string>
    <string name="button_next">Next</string>
    <string name="button_restart">Restart</string>
    <string name="button_modify">Modify</string>
    <string name="button_change_name">Change Name</string>
    <string name="button_continue">Continue</string>
    <string name="button_rescan">Rescan</string>
    <string name="button_reinstall">Reinstall</string>
    <string name="button_delete_device">Delete Device</string>
    <string name="button_reset_device">Reset Device</string>
    <string name="button_reset">Reset</string>
    <string name="button_delete">Delete</string>
    <string name="button_rename">Rename</string>
    <string name="button_set_name">Set Name</string>
    <string name="button_watch_first_cap_small">Watch</string>
    <string name="button_don_not_know">Don\'t Know</string>
    <string name="button_ok">OK</string>
    <string name="font_name_cairo">cairo</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="word_select_Language">Choose language</string>
    <string name="intro_first_time_text">While this is the first time you use the application, please click start button to start setup</string>
    <string name="database_interface_page_title">Database Manager</string>
    <string name="database_interface_database_info_title">Database information</string>
    <string name="database_interface_database_name_label">Database Name</string>
    <string name="database_interface_database_tables_count_label">Tables Count</string>
    <string name="database_interface_database_create_table_button">Create Table</string>
    <string name="database_interface_database_delete_table_button">Delete Table</string>
    <string name="database_interface_database_delete_device_button">Delete Device</string>
    <string name="database_interface_database_create_table_input_hint">Enter the name of table to be created</string>
    <string name="database_interface_database_delete_table_input_hint">Enter the name of table to be deleted</string>
    <string name="database_interface_database_delete_device_table_input_hint">Enter the name of table to delete device from</string>
    <string name="database_interface_database_create_table_input_helper">Please enter a name not more than 20 letters, without numbers or special characters</string>
    <string name="database_interface_database_delete_table_input_helper">Please enter the right table\'s name</string>
    <string name="database_interface_tables_spinner_label">Tables</string>
    <string name="database_interface_devices_spinner_label">Devices</string>
    <string name="database_interface_database_create_table_create_button">Create</string>
    <string name="database_interface_database_delete_table_delete_button">Delete</string>
    <string name="database_setup_page_title">Database Setup</string>
    <string name="database_setup_page_intro_new">While this is the first time that you add a new device we will create the database for the first time</string>
    <string name="database_setup_page_intro_edit">You asked to modify the database, here you can change the password and the password salt</string>
    <string name="database_setup_cipher_hint">Password Salt</string>
    <string name="database_setup_cipher_helper">Please, choose a password salt that is more than 16 characters, you can use the special characters like (@!:*)</string>
    <string name="database_setup_password_hint">Password</string>
    <string name="database_setup_password_helper">Please, choose a password that is more than 8 characters, you can use the special characters like</string>
    <string name="database_setup_end_msg_success">Database created successfully</string>
    <string name="database_setup_end_msg_error">Failed creating the database</string>
    <string name="database_server_table_not_exist_reinstall">Servers table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_server_settings_table_not_exist_reinstall">Servers Settings table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_camera_table_not_exist_reinstall">Cameras table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_camera_settings_table_not_exist_reinstall">Cameras Settings table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_controller_table_not_exist_reinstall">Controllers table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_controller_settings_table_not_exist_reinstall">Controllers Settings table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_detector_table_not_exist_reinstall">Detectors table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="database_detector_settings_table_not_exist_reinstall">Detectors Settings table did not exist in database! You can not continue please restart the application and try again</string>
    <string name="toolbar_search_icon_label">Search</string>
    <string name="toolbar_add_new_server_menu_item_label">Add new server</string>
    <string name="toolbar_add_new_device_menu_item_label">Add new device</string>
    <string name="toolbar_view_installed_servers_menu_item_label">View installed servers</string>
    <string name="toolbar_view_installed_devices_menu_item_label">View installed devices</string>
    <string name="toolbar_settings_menu_item_label">View installed devices</string>
    <string name="wifi_connect_dialog_title">Connect To Server</string>
    <string name="wifi_setup_password_field_helper">The password must be at least (8) characters minimum</string>
    <string name="wifi_setup_default_password_field_hint">Enter default password</string>
    <string name="wifi_setup_password_field_alert">Must enter the default password, the default password can be found on the bottom of your box</string>
    <string name="menu_camera_record_activate_video_record_category_title"><b>Video Record Options</b></string>
    <string name="menu_camera_record_activate_video_record_category_summary">Set/Edit video record options</string>
    <string name="menu_camera_record_activate_video_record_title">Activate Video Record</string>
    <string name="menu_camera_record_activate_video_record_summary">Set activate video record</string>
    <string name="menu_camera_record_activate_video_record_on_summary">Video record activated</string>
    <string name="menu_camera_record_activate_video_record_and_play_title">Activate Video Record And Play</string>
    <string name="menu_camera_record_activate_video_record_and_play_on_summary">Record and play activated</string>
    <string name="menu_camera_record_video_record_and_play_by_ffmpeg_title">Play And Record By FFMPEG</string>
    <string name="menu_camera_record_video_record_and_play_by_ffmpeg_summary">Use FFMPEG to record video</string>
    <string name="menu_camera_record_video_record_and_play_by_ffmpeg_on_summary">Play and record by FFMPEG activated</string>
</resources>