<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_border"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/id_dialog_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wifi_connect_dialog_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_router_info_dialog_input_layout"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/wifi_setup_default_password_field_hint"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/black"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/error"
        app:counterEnabled="true"
        app:counterMaxLength="64"
        app:counterOverflowTextAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        app:counterTextAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorTextColor="@color/design_default_color_error"
        app:helperText="@string/wifi_setup_password_field_helper"
        app:hintTextAppearance="@style/MaterialCustomInputLayoutAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_dialog_input_field"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/id_dialog_default_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"

            android:text="@string/wifi_setup_password_field_alert"
            android:textColor="@color/orange" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/passwordValidationMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_btn_cancel"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_border"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/button_cancel" />

        <TextView
            android:id="@+id/id_btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:background="@drawable/white_border"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/button_connect" />
    </LinearLayout>


</LinearLayout>