<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".database.dbInterface.DatabaseInterface">

    <TextView
        android:id="@+id/id_database_interface_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/database_interface_page_title" />

    <LinearLayout
        android:id="@+id/id_database_content_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_database_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/database_interface_database_info_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_database_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/database_interface_database_name_label" />

            <TextView
                android:id="@+id/id_database_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/id_database_tables_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/database_interface_database_tables_count_label" />

            <TextView
                android:id="@+id/id_database_tables_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/id_database_operations_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_create_table_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_white_bg_brown_1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/database_interface_database_create_table_button"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/id_delete_table_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_white_bg_brown_1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/database_interface_database_delete_table_button"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_delete_device_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_white_bg_brown_1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/database_interface_database_delete_device_button"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_operations_inputs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_create_delete_input_layout"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/database_interface_database_create_table_input_hint"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/black"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/error"
            app:counterEnabled="false"
            app:counterMaxLength="64"
            app:counterOverflowTextAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:counterTextAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:endIconTint="@color/white"
            app:errorEnabled="false"
            app:errorTextAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:errorTextColor="@color/design_default_color_error"
            app:helperTextEnabled="false"
            app:hintTextAppearance="@style/MaterialCustomInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_create_delete_input_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:paddingTop="10dp"
                android:paddingBottom="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_create_delete_table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/border_radius_white_bg_brown_1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/database_interface_database_create_table_create_button"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_delete_device_inputs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/id_db_interface_tables_spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/id_db_interface_tables_spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/database_interface_tables_spinner_label" />

            <Spinner
                android:id="@+id/id_tables_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:dropDownHeight="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_db_interface_devices_spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/id_db_interface_devices_spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/database_interface_devices_spinner_label" />

            <Spinner
                android:id="@+id/id_camera_record_device_name_font_list_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:dropDownHeight="wrap_content" />

        </LinearLayout>


        <Button
            android:id="@+id/id_search_for_devices_to_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/button_get_device"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>